# Vovacraft

./: CMakeLists.txt  readme.md
assets/shaders/: test.frag  test.vert  ui.frag  ui.vert
include/core/: GameState.h  input.h
include/glad/: glad.h
include/graphics/: camera.h  mesh.h  renderer.h  shader.h  texture.h  ui_renderer.h
include/world/: chunk.h
include/world/chunk/: chunk.h  chunkMesh.h  chunkMesher.h
include/world/data/: blocks.h  items.h  structures.h
include/world/data/structures/: tree.h
include/world/generation/: chunkGenerator.h  worldGenerator.h
include/world/generation/populators/: foliageGenerator.h
include/world/physics/: collisions.h  gravity.h  raycast.h
include/world/player/: inventory.h  player.h  playerActions.h  playerMovement.h
include/world/world/: world.h
src/: glad.c  main.cpp  render.cpp  render.h  shader.cpp  shader.h
src/core/: GameState.cpp  input.cpp
src/graphics/: mesh.cpp  render.cpp  renderer.cpp  shader.cpp  texture.cpp  ui_renderer.cpp
src/world/: chunk.cpp
src/world/chunk/: chunk.cpp  chunkMesh.cpp  chunkMesher.cpp
src/world/data/: blocks.cpp
src/world/generation/: chunkGenerator.cpp  worldGenerator.cpp
src/world/generation/populators/: foliageGenerator.cpp
src/world/physics/: collisions.cpp  gravity.cpp  raycast.cpp
src/world/player/: inventory.cpp  player.cpp  playerActions.cpp  playerMovement.cpp
src/world/world/: world.cpp
